--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gluestack-ui/utils": "^3.0.12",
     "@legendapp/motion": "^2.5.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.83.0",
     "@tanstack/react-query": "^5.90.10",
@@ -27,6 +28,7 @@
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
+    "lucide-react-native": "^0.554.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-aria": "^3.44.0",
