--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "kokoro-living",
+    "name": "こころのリビング",
     "slug": "kokoro-living",
     "version": "1.0.0",
     "orientation": "portrait",
