ビルド用の設定

--- a/app.json
+++ b/app.json
@@ -15,13 +15,18 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.kokoroliving.app"
+      "bundleIdentifier": "com.kokoroliving.app",
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "versionCode": 1,
+      "permissions": [
+        "android.permission.INTERNET"
+      ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.kokoroliving.app",
@@ -52,6 +57,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "dd6d9f51-3b91-4e88-bb2c-ce81ab2da5c0"
+      }
+    },
+    "owner": "yutatrm"
   }
 }
