sign in apple実装

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,11 @@ yarn-error.*
 # local env files
 .env*.local
 
+# Apple Sign In secrets
+apple-jwt.txt
+AuthKey_*.p8
+scripts/*.local.js
+
 # typescript
 *.tsbuildinfo
 
