--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react-native": "^0.510.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
