--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-aria": "^3.44.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
