--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-iap": "^14.4.46",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
