--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
+    "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
