--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "^0.5.2",
+    "react-native-worklets": "0.5.1",
     "react-stately": "^3.42.0",
     "tailwind-variants": "^0.1.20",
     "tailwindcss": "^3.4.18",
@@ -53,9 +53,11 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "eas-cli": "^16.28.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "react-native-safe-area-context": "^5.6.2"
   },
   "private": true
 }
