--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.9",
+    "expo-media-library": "^18.2.1",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
@@ -46,6 +47,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "react-stately": "^3.42.0",
