--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.90.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~54.0.25",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.10",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
